--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,6 @@
 [core]
-    remote = gdrv
+    remote = storage
 ['remote "gdrv"']
     url = gdrive://1-vo_GZam8mybgcb4iVVyQ3cNO6nIalfe
+['remote "storage"']
+    url = s3://dvc-public/amrit-test/
